--- a/www/pages/home/profile/profile.html
+++ b/www/pages/home/profile/profile.html
@@ -143,7 +143,7 @@
 <!-- connections list -->
 
 
-      <div>
+      <div style="padding-top:20px">
 
           <div class="row item item-borderless">
               <div class="col col-33" style="padding-left:10%">
